# grim-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  RULES.md  TODO.md
benches/: capture_benchmarks.rs  encode_benchmarks.rs
examples/: comprehensive_demo.rs  multi_output.rs  profile_test.rs  second_monitor_demo.rs  simple.rs  test_integration.rs
src/: error.rs  geometry.rs  lib.rs  main.rs  region_select.rs  region_select_sctk.rs  wayland_capture.rs
tests/: test.rs  test_encapsulation.rs  test_error_handling.rs  test_filename_format.rs  test_geometry_properties.rs  test_grid_aligned.rs
