[package]
name = "grim-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of grim screenshot utility for Wayland"
license = "MIT"
keywords = ["wayland", "screenshot", "grim"]
categories = ["graphics", "api-bindings"]

[lib]
name = "grim_rs"
crate-type = ["lib"]

[dependencies]
image = { version = "0.25", features = ["png"] }
thiserror = "1.0"
anyhow = "1.0"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
tempfile = "3.10"

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["png", "jpeg"]
png = ["image/png"]
jpeg = ["image/jpeg"]