[package]
name = "grim-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of grim screenshot utility for Wayland"
license-file = "LICENSE"
keywords = ["wayland", "screenshot", "grim", "screen-capture"]
categories = ["graphics", "api-bindings"]
repository = "https://github.com/vremyavnikuda/grim-rs"
documentation = "https://docs.rs/grim-rs"
homepage = "https://github.com/vremyavnikuda/grim-rs"
readme = "README.md"
exclude = ["/examples", "/target", ".gitignore", "todo.md", "grim.md"]
authors = ["vremyavnikuda <hopperplayer0@gmail.com>"]

[lib]
name = "grim_rs"
crate-type = ["lib"]

[dependencies]
image = { version = "0.25", features = ["png"] }
thiserror = "1.0"
anyhow = "1.0"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
tempfile = "3.10"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["png", "jpeg"]
png = ["image/png"]
jpeg = ["image/jpeg"]